--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,9 +22,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Deploy to Azure Functions
-      uses: Azure/functions-action@v1
+    - name: Azure Login
+      uses: azure/login@v1
       with:
-        app-name: docprocfunc
-        package: .
-        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy to Azure Functions
+      run: |
+        func azure functionapp publish docprocfunc --python
