--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,6 +17,13 @@ jobs:
       with:
         python-version: '3.11'
 
+    - name: Install Azure Functions Core Tools
+      run: |
+        wget -q https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
+        sudo dpkg -i packages-microsoft-prod.deb
+        sudo apt-get update
+        sudo apt-get install azure-functions-core-tools-4
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
